--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -20,7 +20,11 @@
     <!--Styles CSS-->
     <link rel="stylesheet" href="style.css" />
     <!--Logo Icon Link-->
-    <link rel="icon" type="image/jpeg" href="../images/logo.png" />
+    <link
+      rel="icon"
+      type="image/jpeg"
+      href="https://github.com/OlyaMelska/friendFinder/blob/master/app/images/logo.png?raw=true"
+    />
     <style>
       body {
         color: #fab942;
@@ -130,7 +134,11 @@
 
   <body>
     <header>
-      <img src="../images/logo.png" alt="logo" id="header-logo" />
+      <img
+        src="https://github.com/OlyaMelska/friendFinder/blob/master/app/images/logo.png?raw=true"
+        alt="logo"
+        id="header-logo"
+      />
     </header>
     <main>
       <h2>About You</h2>
@@ -363,14 +371,8 @@
 
     <!--jQuery-->
     <script
-      src="http://code.jquery.com/jquery-3.3.1.js"
-      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-      crossorigin="anonymous"
-    ></script>
-
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      src="https://code.jquery.com/jquery-3.4.0.min.js"
+      integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
       crossorigin="anonymous"
     ></script>
     <script
@@ -386,37 +388,43 @@
     <script src="main.js"></script>
     <script>
       let submitBtn = document.getElementById("submit");
-      let arrOfNumb2 = [5, 1, 4, 4, 5, 1, 2, 5, 4, 1];
       let newFriend = {};
+      console.log(submitBtn);
       submitBtn.addEventListener("click", () => {
         event.preventDefault();
-        // {
-        //     name: "Ahmed",
-        //         photo:
-        //     "https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg",
-        //         scores: [5, 1, 4, 4, 5, 1, 2, 5, 4, 1]
-        // }
+
+        const dropdowns = document.getElementsByClassName("answers");
+        const answers = [];
+
+        for (let i = 0; i < 10; i++) {
+          console.log(dropdowns[i]);
+          const value = dropdowns[i].value;
+
+          answers.push(value);
+        }
+
         let name = document.getElementById("name").value;
         let photo = document.getElementById("photo").value;
         newFriend = {
           name: name,
           photo: photo,
-          scores: arrOfNumb2
+          scores: answers
         };
-        console.log(name, photo, arrOfNumb2);
-        $.get("/api/friends", newFriend).then(response => {
+
+        $.post("/api/friends", newFriend).then(response => {
           console.log("Response" + response);
-          alert("Successfully");
         });
-        $.post("/api/friends").then(response => {
-          console.log("ok", response);
-          let foundFriend = findMatch(response, newFriend);
+        $.get("/api/friends").then(response => {
+          let foundFriend = findMatch(response.friends, newFriend);
+          console.log("Friend at GER Request ", foundFriend);
           let h2 = $("<h2>");
           let img = $("<img>");
           let imgDiv = $("<div>");
           h2.text(foundFriend.name);
           img.attr("src", foundFriend.url);
+          img.addClass("img-fluid");
           imgDiv.append(img);
+          $(".result-div").empty();
           $(".result-div").append(h2, imgDiv);
           console.log(
             `your match:\nname: ${foundFriend.name} photo: ${foundFriend.url}`
@@ -429,7 +437,13 @@
         let arr = []; //to store total diffrences and name
         let totalDifferenceArr = []; //to store just total difference
         let friendResult = ""; //function will return the name
-        data.forEach(element => {
+        let totalArr = data.filter(elem => {
+          if (elem.name !== currentUser.name) {
+            return elem;
+          }
+        });
+        console.log("TOTAL ", totalArr);
+        totalArr.forEach(element => {
           let sum = 0;
           let obj = {}; //to save name and total difference for each element of data array
           for (let i = 0; i < element.scores.length; i++) {
@@ -449,9 +463,9 @@
         arr.forEach(element => {
           if (element.totalDifference === result) {
             friendResult = element;
-            console.log("Element ", friendResult);
+            console.log("Your friend that you matched to: ", friendResult);
           } else {
-            friendResult = "No match found";
+            friendResult = "";
           }
         });
         return friendResult;
